# cocoa_volatility

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
config/: climate_locations.yaml  domestic_market_sources.yaml  eu_market_sources.yaml  international_market_sources.yaml  macro_control_sources.yaml  paths.yaml  project_config.yaml  source_registry.yaml  variable_dictionary.yaml
docs/: citation_justification.md  data_collection_progress.md  dataset_search_instructions.md  manuscript_outline.md  methodology_notes.md  methods_and_data_acquisition_limitations.md  model_plan.md  preliminary_statistical_properties_imputed.md  project_specification.md  time_series_sample_length_guidance.md  variable_log.md
paper/: README.md  build_manuscript.ps1  cocoa_volatility_manuscript.aux  cocoa_volatility_manuscript.bbl  cocoa_volatility_manuscript.blg  cocoa_volatility_manuscript.out  cocoa_volatility_manuscript.tex  cocoa_volatility_manuscript.toc  latex_bundle_manifest.csv  latex_bundle_manifest.json
references/: cocoa_volatility.bib
scripts/: 00_download_colombia_cocoa_prices.py  00_download_eu_prices.py  00_download_international_cocoa_prices.py  00_download_macro_controls.py  00_download_nasa_power_climate.py  01_build_raw_registry.py  02_clean_domestic_prices.py  03_clean_international_prices.py  04_clean_eu_prices.py  04_clean_macro_controls.py  05_build_merged_dataset.py  05a_impute_missing_values.py  06_descriptive_analysis.py  06b_statistical_properties_imputed.py  06c_statistical_properties_all_series_imputed.py  08_arima_and_volatility.py  (+5 more)
(+231 files in other folders)
