[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocoa-volatility"
version = "0.1.0"
description = "Functional research pipeline for cocoa price transmission, macro and climate integration, and descriptive volatility analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "PyYAML>=6.0",
  "requests>=2.32",
  "openpyxl>=3.1",
  "pyarrow>=16.0",
  "scikit-learn>=1.5",
  "xlsxwriter>=3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
